--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,5 +25,11 @@
     <%= yield %>
  
 
+    <div id="step4">
+      <div class="container">
+     <p>Este proyecto forma parte del concurso <a href="http://www.abredatos.es" title="Ir a web del Desafío AbreDatos">AbreDatos</a> y ha sido realizado en 48 horas.</p>
+     <p>Su autoría pertenece al equipo <a href="http://live.abredatos.es/teams/35" title="Ver información">Linkopía</a>, formado por <a href="mailto:guillermo@cientifico.net" title="Email de contacto">Guillermo Álvarez</a> y <a href="mailto:ster@ster-eo.net" title="Email de contacto">Esther Amor</a>.</p>
+    </div>
+
 </body>
 </html>
