Added google analytics

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,5 +31,14 @@
      <p>Su autoría pertenece al equipo <a href="http://live.abredatos.es/teams/35" title="Ver información">Linkopía</a>, formado por <a href="mailto:guillermo@cientifico.net" title="Email de contacto">Guillermo Álvarez</a> y <a href="mailto:ster@ster-eo.net" title="Email de contacto">Esther Amor</a>.</p>
     </div>
 
+    <script type="text/javascript">
+    var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+    document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+    </script>
+    <script type="text/javascript">
+    try {
+    var pageTracker = _gat._getTracker("UA-15919820-1");
+    pageTracker._trackPageview();
+    } catch(err) {}</script>
 </body>
 </html>
