Actualización del título

--- a/app/views/deputies/index.html.erb
+++ b/app/views/deputies/index.html.erb
@@ -1,5 +1,5 @@
 <div id="block">
-  <h2>Ranking de Diputados que más iniciativas aportan</h2>
+  <h2>Listado de Diputados de la actual legislatura</h2>
 </div> <!-- #block -->
 
 <div id="step5">
