Add political groups

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -24,7 +24,7 @@
  
 <div id="step2">
   <div class="container">
-    <h3>Por partidos</h3>
+    <h3>Por <a href="/political_parties">partidos</a></h3>
     <ul class="team">
       <li>
         <strong><%= image_tag @best_political_party.logo_url, :alt => @best_political_party.name %></strong>
