Añadir js de png

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,14 +4,14 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="language" content="es" />
 <title>3.126 € - ¿Se ganan su sueldo nuestros diputados?</title>
-<meta name="description" content="3.126 euros muestra con datos, gráficos y números los movimientos que se realizan en el Congreso."/>
+<meta name="description" content="3.126 euros muestra de manera clara y sencilla mediante números los movimientos que se realizan en el Congreso."/>
 <meta name="keywords" content="Congreso de los Diputados, Congreso, Senado, Parlamento, parlamentarios, ley, constitución, ministros, diputados, hemiciclo, España, presidente del gobierno, legislatura, democracia" />
 <link href="/css/styles.css" rel="stylesheet" type="text/css" />
 <link href="/css/reset.css" rel="stylesheet" type="text/css" />
 <!--[if IE 6]>
-<script src="../js/DD_belatedPNG.js"></script>
+<script src="/javascripts/DD_belatedPNG.js"></script>
 <script>
-    DD_belatedPNG.fix('#step1, #step2, #step3');
+    DD_belatedPNG.fix('#step1, #step2, #step3, #step4, #step5');
 </script>
 <![endif]-->
 </head>
